= 1.7.72 (09 July 2024) =
* Bug Fixed  : The visibility option is not working for the CTA feature. #905
* Bug Fixed  : Navigation bar extension conflict issue #910
* Bug Fixed  : When we click on saving button on Nav bar data was not saved. #913
* Improvement  : Code improvement.

= 1.7.71 (03 July 2024) =
* Feature Added  : Make an option to select form factor from the option #899
* Feature Added  : Sharing Media in Progressive Web Apps in BuddyPress #1591
* Bug Fixed  : Creation of dynamic property is deprecated #903
* Bug Fixed  : Deprecation : $is_amp is defined before require parameter #911
* Bug Fixed  : Offline form radio group validation not working #900
* Bug Fixed  : Fatal error in CTA #904

= 1.7.70 (15 May 2024) =
* Bug Fixed  : Uncaught TypeError: fwrite(): Argument #1 ($stream) must be of type resource, bool given in #888
* Bug Fixed  : Add to home on element click is not working when adding button via elementor #891
* Bug Fixed  : While clicking the close button on the CTA banner it shows the pop-up to install #893

= 1.7.69.1 (09 May 2024) =
* Bug Fixed  : PWA: Activation Failed error with wordpress latest update. #886

= 1.7.69 (22 April 2024) =
* Feature Added : added a new feature so that users can be able to upload their own images to use as an icon in the Navigation Bar #869
* Bug Fixed  : Latest Version 1.7.67 Gives Warning: Undefined Variable $force_rememberme #878

= 1.7.68 (05 April 2024) =
* Feature Added : added the navigation bar backgound feature. #874
* Bug Fixed  : Latest Version 1.7.67 Gives Warning: Undefined Variable $force_rememberme #878
* Bug Fixed  : CTA delayed feature is not working properly in IOS chrome mobile version. #879
* Bug Fixed  : Conflict issue with Polylang plugin #880

= 1.7.67 (26 March 2024) =
* Feature Added : New option so that category pages can be configured as the start page in PWA #861
* Improvement: Compatibility with WP-Hide plugin. #732